# nstat

./: Cargo.toml  README.md
src/: app.rs  main.rs  state.rs  stats.rs  wifi.rs
src/probe/: http.rs  icmp.rs  mod.rs  netmon.rs  pubnet.rs
src/ui/: chart.rs  footer.rs  header.rs  mod.rs
tests/fixtures/: airport.xml
